@startuml class_diagram
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam linetype ortho

title Flower Shop -- Class Diagram

' ═══════════════════════════════════════════
'  CATALOG SERVICE
' ═══════════════════════════════════════════
package "Catalog Service" {

    class Flower {
        + id : int
        + name : str
        + color : str
        + price : float
        + stock : int
    }

    class FlowerRepository {
        + get_all() : List[Flower]
        + add_flower(...)
        + update_flower(...)
        + delete_flower(id)
    }

    abstract class Command {
        + {abstract} execute()
    }
    class AddFlowerCommand {
        + execute()
    }
    class UpdateFlowerCommand {
        + execute()
    }
    class DeleteFlowerCommand {
        + execute()
    }

    class FlowerQueryService {
        + get_catalog(color, sort) : List[Flower]
        + get_by_id(id) : Flower
    }

    abstract class FlowerExporter {
        + export(flowers) : str
        + {abstract} transform(data) : str
    }
    class JsonExport {
        + transform(data) : str
    }
    class CsvExport {
        + transform(data) : str
    }

    class FlowerService {
        + add_new_flower(...)
        + update_flower_stock(...)
        + delete_flower(...)
    }

    class NotificationService {
        + update(action, detail, email)
    }

    class ApiController {
        + login()
        + visitor_access()
        + session_info()
        + list_flowers()
        + create_flower()
        + update_flower(id)
        + update_stock(id)
        + delete_flower(id)
        + export_data(fmt)
    }

    class ApiError {
        + message : str
        + code : str
        + status_code : int
    }

    ' Relationships inside Catalog Service
    FlowerRepository ..> Flower : creates

    Command <|-- AddFlowerCommand
    Command <|-- UpdateFlowerCommand
    Command <|-- DeleteFlowerCommand

    AddFlowerCommand    --> FlowerRepository
    UpdateFlowerCommand --> FlowerRepository
    DeleteFlowerCommand --> FlowerRepository

    FlowerQueryService  --> FlowerRepository

    FlowerExporter <|-- JsonExport
    FlowerExporter <|-- CsvExport

    FlowerService --> FlowerRepository
    FlowerService --> FlowerQueryService
    FlowerService ..> Command            : executes
    FlowerService --> NotificationService : notifies

    ApiController --> FlowerService
    ApiController --> FlowerQueryService
    ApiController ..> FlowerExporter : uses
    ApiController ..> ApiError : raises
}

package "Client Application" {
    class WebClient {
        + renderCatalog()
        + callApi()
        + switchLanguage()
        + sendChatMessage()
    }

    class TranslationDictionary {
        + en : dict
        + ro : dict
    }

    class SocketClient {
        + connect()
        + emit(message)
        + receive(message)
    }

    WebClient --> TranslationDictionary
    WebClient --> SocketClient
}

' ═══════════════════════════════════════════
'  IDENTITY SERVICE
' ═══════════════════════════════════════════
package "Identity Service" {

    class User {
        + user_id : int
        + email : str
        + role : str
    }

    class UserRepository {
        + get_user_by_credentials(email, pwd) : User
    }

    class UserService {
        + login(email, password) : dict
    }

    class UserController {
        + login()
    }

    class IdentityApiError {
        + message : str
        + code : str
        + timestamp : str
    }

    ' Relationships inside Identity Service
    UserRepository ..> User : creates
    UserService    --> UserRepository
    UserController --> UserService
    UserController ..> IdentityApiError
}

@enduml
